--- a/static/package.json
+++ b/static/package.json
@@ -10,7 +10,12 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "axios": "^0.17.1",
+    "bulma": "^0.6.2",
+    "flatbuffers": "^1.8.0",
+    "vue": "^2.5.11",
+    "vuex": "^3.0.1",
+    "xstream": "^11.1.0"
   },
   "browserslist": [
     "> 1%",
