--- a/static/package.json
+++ b/static/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.17.1",
     "bulma": "^0.6.2",
     "flatbuffers": "^1.8.0",
+    "lodash": "^4.17.5",
     "vue": "^2.5.11",
     "vuex": "^3.0.1",
     "xstream": "^11.1.0"
